# app/Http/Resources/ServidorUnidadeResource.php
@@ -2,23 +2,19 @@
 
 namespace App\Http\Resources;
 
+use Carbon\Carbon;
 use Illuminate\Http\Resources\Json\JsonResource;
+use Illuminate\Support\Facades\Storage;
 
 class ServidorUnidadeResource extends JsonResource
 {
     public function toArray($request)
     {
         return [
-            'nome' => $this->pessoa->pes_nome,
-            'idade' => $this->calculateAge($this->pessoa->pes_data_nascimento),
-            'unidade_lotacao' => $this->unidade->unid_nome
+            'nome' => $this->pes_nome,
+            'idade' => Carbon::parse($this->pes_data_nascimento)->age,
+            'unidade_lotacao' => $this->lotacaoAtiva->unidade->unid_nome,
+            'fotografia' => $this->foto ? Storage::disk('minio')->url($this->foto->fp_arquivo) : null,
         ];
-    }
-
-    private function calculateAge($birthDate)
-    {
-        $birthDate = new \DateTime($birthDate);
-        $today = new \DateTime();
-        return $today->diff($birthDate)->y;
     }
 }
